# AoC2023

./: .gitignore  CMakeLists.txt  LICENSE  README.md
01/: CMakeLists.txt  main.cpp
02/: .clang-format  CMakeLists.txt  main.cpp
03/: .clang-format  CMakeLists.txt  main.cpp
04/: CMakeLists.txt  main.cpp
05/: CMakeLists.txt  main.cpp
06/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  utils.cpp  utils.hpp
utils/include/utils/: utils.hpp
utils/src/: utils.cpp
